--- a/front/src/Components/Carteleta/Cartelera.scss
+++ b/front/src/Components/Carteleta/Cartelera.scss
@@ -1,8 +1,20 @@
 .cartelera-container{
-margin-top:3%;
+margin-top:0%;
 display: flex;
 height: 500px;
 flex-wrap: wrap;
-justify-content: center;
+margin-left: 2%;
 }
 
+@media (max-width: 400px) {
+    .cartelera-container {
+   margin-left:15% ;
+    }
+
+}
+@media (min-width: 270px) {
+    .cartelera-container {
+   margin-left:1% ;
+    }
+
+}
