--- a/front/src/Components/SearchBar/SearchBar.scss
+++ b/front/src/Components/SearchBar/SearchBar.scss
@@ -1,40 +1,14 @@
 .SearchBar-contenedor {
-    width: 300px;
-    input {
-        border-radius: 6px;
-        border-width: 1px;
-        margin-right: 20px;
-        padding: 3px;
-        background-color: black;
-        color:white
-    }
-}
-.nav-contenedor-button-Search {
-    text-align: center;
-    padding: 1%;
-    text-decoration: none;
-    font-size: medium;
-    height: 24px;
-    width: 80px;
-    border-radius: 8px;
-    color: rgb(220, 225, 230);
-    box-shadow: 1px 1px 1px 1px rgb(22, 21, 21);
-}
-.nav-contenedor-button-Search:hover {
-    height: 24px;
-    width: 80px;
+    display: flex;
 }
 .SearchBar-contenedor-lupa {
-    padding: 2px;
-    position: absolute;
+    margin-right: 4%;
+    margin-left: 10%;
+}
+
+.lupa {
     background-color: rgba(240, 248, 255, 0.698);
     border-radius: 15px;
-    top: 1px;
-    right: 320px;
-    width: 20px;
-    height: 20px;
-}
-.SearchBar-contenedor-lupa:hover{
-    width: 24px;
-    height: 24px;
+    width: 28px;
+    height: 28px;
 }
