--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,8 +1,9 @@
 body {
-    /* background:rgba(16, 16, 220, 0.667); */
+  
     height: 100vh;
+    width: 100vw;
     background-size: cover;
-    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; 
-    background-image: url("https://p4.wallpaperbetter.com/wallpaper/744/804/845/computer-engineering-science-tech-wallpaper-preview.jpg");
-
+    font-family: sans-serif;
+     background-color: #141414;
+  
   }
