--- a/front/src/Components/Movie/Movie.css
+++ b/front/src/Components/Movie/Movie.css
@@ -8,16 +8,17 @@
   margin: 1%;
 }
 
-.poster {
-  height: 180px;
-  width: 115px;
+.posterHome {
+  height: 186px;
+  width: 125px;
   border-radius: 15px;
   padding: 10px;
 }
 
-.poster:hover {
-  height: 230px;
-  width: 160px;
+.posterHome:hover {
+  height: 190px;
+  width: 128px;
+  z-index: 1;
 }
 
 .yellow-star {
@@ -26,7 +27,7 @@
   height: 20px;
   top: 40px;
   left: 15px;
-  z-index: 2;
+  z-index: 1;
   cursor: pointer;
 }
 
