--- a/front/src/App.css
+++ b/front/src/App.css
@@ -3,7 +3,7 @@ body {
     height: 100vh;
     width: 100vw;
     background-size: cover;
-    font-family: sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
      background-color: #141414;
   
   }
